[workspace]
members = [
    "bin/gameboy-emulator",
]

default-members = ["bin/gameboy-emulator"]
resolver = "2"

[workspace.package]
authors = ["Kolby ML <kolbyml@protonmail.com"]
edition = "2021"
keywords = ["gameboy emulator", "rust", "wasm", "webassembly"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ReamLabs/ream"
rust-version = "1.81.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.95"
clap = "4"
pixels = "0.15.0"
tracing = "0.1.27"

# gameboy-emulator dependencies
gameboy-emulator = { path = "bin/gameboy-emulator"}
